# Personal-Digital-FTE-Agent-Hackathon

./: .gitignore  AGENTS.md  AI_Employee_Vault  README.md  api_server.py  docker-compose.odoo.yml  main.py  package-lock.json  pyproject.toml  test_image.txt
docs/: architecture.md  lessons-learned.md  platinum-cloud-operations.md  platinum-local-executive.md  platinum-odoo-cloud.md  platinum-runbook.md
frontend/: .gitignore  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/: ai-loop-controls.tsx  app-header.tsx  command-palette.tsx  create-draft-panel.tsx  critical-alerts-rail.tsx  empty-state.tsx  feedback-banner.tsx  live-events-boot.tsx  nav.tsx  panel.tsx  permission-guard.tsx  role-status.tsx  run-ai-task-panel.tsx  scenario-runner-panel.tsx  shell.tsx  stat-card.tsx  theme-provider.tsx  theme-toggle.tsx  tier-selector.tsx  watcher-control-board.tsx
frontend/lib/: auth-client.ts  client-api.ts  rbac.ts  (+8 more)
mcp_servers/: email_server.py  odoo_server.py
scheduler/: scheduler.py
scripts/: finalize_gold.sh  finalize_platinum.sh  finalize_silver.sh
utils/: __init__.py  audit_logger.py  error_recovery.py  plan_creator.py  ralph_wiggum.py  self_healer.py
watchers/: base_watcher.py  facebook_poster.py  facebook_watcher.py  filesystem_watcher.py  gmail_watcher.py  instagram_poster.py  instagram_watcher.py  linkedin_poster.py  linkedin_watcher.py  social_poster.py  twitter_poster.py  twitter_watcher.py  whatsapp_watcher.py
(+63 files in other folders)
